# SableOperator

./: README.md  TASK_PROPOSALS.md  deploy_local.sh  pyproject.toml
.cursor/rules/: mcp.mdc
.github/: copilot-instructions.md
src/sable_operator/: __init__.py  core.py
tests/: test_core.py
