[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sable-operator"
version = "0.1.0"
description = "Optimized text analytics starter"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SableOperator" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
